[package]
name = "hello-bin"
description = "Hello World"
homepage = "https://github.com/akiernan/hello-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figlet-rs = "0.1.5"
hello-lib = { git = "https://github.com/akiernan/hello-lib.git", rev = "2552af9d648985dbbb2d13c07d54a4938b9a3774", version = "0.1.0" }
